# fewtrax

./: .buildinfo  .gitignore  .readthedocs.yaml  AUTHORS.md  LICENSE.md  README.md  TUTORIAL.md  api.html  custom_f-fdot_functionality.ipynb  examples.html  genindex.html  index.html  installation.html  math_background.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js
_modules/: index.html
_sources/: installation.rst.txt
comparison/: README.md  Results_benchmark_gpu_Grid_16384.md  benchmark_gpu.py  benchmark_vmap_tracks.py  compare_amplitude.py  compare_elliptic.py  compare_phase.py  compare_summation.py  compare_tf.py  compare_trajectory.py  compare_waveform.py  diagnose_phase_accuracy.py  report_inspiral_comparison.md  tf_waveform_explorer.ipynb  trajectory_grid_scan.ipynb  utils.py  waveform_explorer.ipynb
examples/: 01_kerr_geodesics.ipynb  02_emri_trajectory.ipynb  03_amplitude_interpolation.ipynb  04_mode_summation.ipynb  05_full_waveform.ipynb  06_jax_features.ipynb  EMRI_wf_JAX_comparison.ipynb  quickstart.py
legacy/: splines_unused.py
notebooks/: 01_kerr_geodesics.html  01_kerr_geodesics.ipynb  02_emri_trajectory.html  02_emri_trajectory.ipynb  03_amplitude_interpolation.html  03_amplitude_interpolation.ipynb  04_mode_summation.html  04_mode_summation.ipynb  05_full_waveform.html  05_full_waveform.ipynb  06_jax_features.html  06_jax_features.ipynb  EMRI_wf_JAX.html  EMRI_wf_JAX_comparison.html  EMRI_wf_JAX_comparison.ipynb  EMRI_wf_JAX_updated.html  EMRI_wf_JAX_updated.ipynb
prompts/: refinement.md  target.md
tests/: __init__.py  conftest.py  (+10 more)
(+52 files in other folders)
